[project]
name = "tch"
version = "1.0.0"
description = "Quick terminal file creation tool"
readme = "README.md"
authors = [
    { name = "wyattferguson", email = "wyattf@gmail.com" }
]
requires-python = ">=3.12"
license = { file = "LICENSE" }
keywords = ["cli", "files", "command-line", "touch", "python"]
dependencies = [
    "click>=8.1.8",
]

[project.urls]
homepage = "https://github.com/wyattferguson/tch"
repository = "https://github.com/wyattferguson/tch"


[project.scripts]
tch = "tch.tch:cli"

[tool.hatch.build.targets.wheel]
packages = ["tch"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "ruff>=0.9.7",
    "setuptools>=75.8.1",
    "taskipy>=1.14.1",
    "twine>=6.1.0",
    "wheel>=0.45.1",
]


[tool.taskipy.tasks]
format = "ruff format ./tch/"
lint = "ruff check --fix ./tch/ && mypy ./tch/"
typecheck = "mypy ./tch/"
tests = "pytest --verbose --color=yes tests"
run = "uv run ./tch/tch.py"

[tool.ruff]
line-length = 100
indent-width = 4
format.indent-style = "space"
target-version = "py312"
unfixable = ["F401"] # Disable fix for unused imports
src = ["tch", "tests"]

[tool.coverage.run]
omit = [ "tests/*"]
source = [ "tch" ]

[tool.coverage.report]
exclude_lines = [ 'if TYPE_CHECKING:', "except ImportError:" ]
fail_under = 90

[tool.mypy]
packages = [ "tch" ]
python_version = "3.12"
disable_error_code = 'import-untyped'
implicit_reexport = false
show_error_codes = true
strict = true
